--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vercel": "^33.2.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.25.2"
