--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^1.1.0",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
     "superjson": "^2.2.1",
