feat: injest exchange 3 data

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
+    "tsx": "^4.7.0",
     "typescript": "^5.1.6",
     "vercel": "^33.2.0"
   },
