--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.7.2",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -45,6 +46,7 @@
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-wrap-balancer": "^1.1.0",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
