--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
@@ -38,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "date-fns": "^3.3.0",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.312.0",
@@ -45,9 +48,11 @@
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-wrap-balancer": "^1.1.0",
+    "recharts": "^2.10.4",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
     "superjson": "^2.2.1",
