--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.312.0",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.24.7",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
