--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "pg": "^8.11.3",
+    "plotly.js": "^2.28.0",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
+    "react-plotly.js": "^2.6.0",
     "react-wrap-balancer": "^1.1.0",
     "recharts": "^2.10.4",
     "server-only": "^0.0.1",
