--- a/package.json
+++ b/package.json
@@ -67,8 +67,10 @@
   "devDependencies": {
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
+    "@types/plotly.js": "^2.12.32",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-plotly.js": "^2.6.3",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
